--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -1,7 +1,5 @@
 {%  extends 'layout.html'  %}
 
-
-
 {% block help_developer %}
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ >
 # This Section help you to find specific section.
@@ -17,61 +15,26 @@
 
 
 {% block body %}
-    <div class="custom_form_center_100vh">
-        <div class="container text-center">
+<div class="custom_form_center_100vh">
+    <div class="container text-center">
+        <h1> All these routes are available </h1>
 
-            <h1> All these routes are available </h1>
-            <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
-                <label class="btn btn-outline-primary" for="btnradio1">
-                    <a href=" {{ url_for('main.index') }} " class="nav-link active-nav-link"> Home </a>
-                </label>
+        <div class="btn-group btn-group-sm" role="group" aria-label="Small button group">
+            <a href=" {{ url_for('main.index') }} " class="btn btn-outline-dark"> Home </a>
+            <a href=" {{ url_for('users.login') }} " class="btn btn-outline-dark"> Login  </a>
+            <a href=" {{ url_for('users.login_parents') }} " class="btn btn-outline-dark"> Parents Login </a>
+            <a href=" {{ url_for('users.admission') }} " class="btn btn-outline-dark"> Admission </a>
+            <a href=" {{ url_for('users.apply_parents') }} " class="btn btn-outline-dark"> Parents Application Form </a>
+            <a href=" {{ url_for('users.apply_teacher') }} " class="btn btn-outline-dark"> Teacher Application Form </a>
+            <a href=" {{ url_for('main.about') }} " class="btn btn-outline-dark"> About </a>
+        </div>
 
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-                <label class="btn btn-outline-primary" for="btnradio2">
-                    <a href=" {{ url_for('users.login') }} " class="nav-link"> Login  </a>
-                </label>
+        <br>
 
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
-                <label class="btn btn-outline-primary" for="btnradio3">
-                    <a href=" {{ url_for('users.login_parents') }} " class="nav-link">
-                        Parents Login
-                    </a>
-                </label>
-
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off">
-                <label class="btn btn-outline-primary" for="btnradio4">
-                    <a href=" {{ url_for('users.admission') }} " class="nav-link">
-                        Admission
-                    </a>
-                </label>
-
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio5" autocomplete="off">
-                <label class="btn btn-outline-primary" for="btnradio5">
-                    <a href=" {{ url_for('users.apply_parents') }} " class="nav-link">
-                        Parents Application Form
-                    </a>
-                </label>
-
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio6" autocomplete="off">
-                <label class="btn btn-outline-primary" for="btnradio6">
-                    <a href=" {{ url_for('users.apply_teacher') }} " class="nav-link">
-                        Teacher Application Form
-                    </a>
-                </label>
-
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio7" autocomplete="off">
-                <label class="btn btn-outline-primary" for="btnradio7">
-                    <a href=" {{ url_for('main.about') }} " class="nav-link">
-                        About
-                    </a>
-                </label>
-            </div>
-
-            <!-- <h1> I will be right back! </h1>
-            <br />
-            <h2> Just 10 minutes </h2> -->
-
-        <div>
-            </div>
+        <div class="btn-group btn-group-sm mt-3" role="group" aria-label="Small button group">
+            <a href=" {{ url_for('exam.addexam') }} " class="btn btn-outline-dark"> Add Exam </a>
+            <a href=" {{ url_for('exam.addexam_subject') }} " class="btn btn-outline-dark"> Add Exam Subject </a>
+        </div>
+    </div>
+</div>
 {% endblock %}
