--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -32,8 +32,16 @@
         <br>
 
         <div class="btn-group btn-group-sm mt-3" role="group" aria-label="Small button group">
-            <a href=" {{ url_for('exam.addexam') }} " class="btn btn-outline-dark"> Add Exam </a>
-            <a href=" {{ url_for('exam.addexam_subject') }} " class="btn btn-outline-dark"> Add Exam Subject </a>
+            <a href=" {{ url_for('exam.addexam') }} " class="btn btn-outline-dark"> 
+                Add Exam 
+            </a>
+
+            <a href=" {{ url_for('exam.addexam_subject') }} " class="btn btn-outline-dark"> 
+                Add Exam Subject 
+            </a>
+            <a href=" {{ url_for('exam.addexam_student_result') }} " class="btn btn-outline-dark"> 
+                Add Student Result 
+            </a>
         </div>
     </div>
 </div>
